syntax = "proto3";

message PublicKey {

}
